--- a/manifest.json
+++ b/manifest.json
@@ -38,5 +38,8 @@
       "js": ["amazon_product.js"]
     }
   ],
+  "web_accessible_resources": [
+    "data/mapping.json"
+  ],
   "manifest_version": 2
 }
